Correction de media query pour overflow

--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@ body {
   background-position: center;
   color: #fff;
   text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
-  overflow: auto;
+  overflow: hidden;
 }
 
 html, 
